@@ -150,6 +150,7 @@ CGUISettings::CGUISettings(void)
   AddBool(2, "Pictures.UseAutoSwitching", 14011, false);
   AddBool(3, "Pictures.AutoSwitchUseLargeThumbs", 14012, false);
   AddBool(4, "Pictures.AllowFileDeletion", 14071, false);
+  AddBool(5, "Pictures.HandleArchives", 516, true);
 
   AddCategory(0, "Slideshow", 108);
   AddInt(1, "Slideshow.StayTime", 224, 9, 1, 1, 100, SPIN_CONTROL_INT_PLUS, MASK_SECS);
@@ -223,6 +224,7 @@ CGUISettings::CGUISettings(void)
   AddInt(10, "MusicFiles.AutoSwitchMethod", 14013, 0, 0, 1, 2, SPIN_CONTROL_TEXT);
   AddInt(11, "MusicFiles.AutoSwitchPercentage", 14014, 50, 0, 5, 100, SPIN_CONTROL_INT_PLUS, MASK_PERCENT);
   AddBool(12, "MusicFiles.AllowFileDeletion", 14071, false);
+  AddBool(13, "MusicFiles.HandleArchives", 516, true);
 
   AddCategory(3, "MusicPlaylist", 136);
   AddBool(1, "MusicPlaylist.ClearPlaylistsOnEnd",239,false);
@@ -406,6 +408,7 @@ CGUISettings::CGUISettings(void)
   AddInt(5, "VideoFiles.AutoSwitchMethod", 14013, 0, 0, 1, 2, SPIN_CONTROL_TEXT);
   AddInt(6, "VideoFiles.AutoSwitchPercentage", 14014, 50, 0, 5, 100, SPIN_CONTROL_INT_PLUS, MASK_PERCENT);
   AddBool(7, "VideoFiles.AllowFileDeletion", 14071, false);
+  AddBool(8,"VideoFiles.HandleArchives",516, true);
 
   AddCategory(5, "VideoPlayer", 16003);
   AddString(1, "VideoPlayer.JumpToAudioHardware", 16001, "", BUTTON_CONTROL_STANDARD);
